Add auth to katas routes
