# src/controller/interfaces/index.ts
@@ -14,6 +14,19 @@ export interface IUserController {
   updateUser(id: string, user: any): Promise<any>;
 }
 
+export interface IKataController {
+  // List all Katas from database || get a single Kata By ID
+  getKatas(id?: string, level?: string, sort?: string): Promise<any>;
+  // Delete Kata By ID
+  deleteKata(id?: string): Promise<any>;
+  // Create new Kata
+  createKata(kata: any): Promise<any>;
+  // Update Kata
+  updateKata(id: string, kata: any): Promise<any>;
+  // Rate Kata
+  rateKata(id: string, userValoration: number): Promise<any>;
+}
+
 export interface IAuthController {
   // register users
   registerUser(user: IUser): Promise<any>;
