# src/routes/index.ts
@@ -6,8 +6,12 @@
 import express, { Request, Response } from 'express';
 import helloRouter from './HelloRouter';
 import userRouter from './UserRouter';
+import kataRouter from './KataRouter';
 import authRouter from './AuthRouter';
 import { LogInfo } from '../utils/logger';
+
+// JWT Verifier MiddleWare
+import { verifyToken } from '../middlewares/verifyToken.middleware';
 
 // Server instance
 const server = express();
@@ -28,7 +32,8 @@ rootRouter.get('/', (req: Request, res: Response) => {
 // Redirections to Routers & Controllers
 server.use('/', rootRouter); // http://localhost:8000/api/
 server.use('/hello', helloRouter); // http://localhost:8000/api/hello --> HelloRouter
-server.use('/users', userRouter); // http://localhost:8000/api/users --> userRouter
+server.use('/users', verifyToken, userRouter); // http://localhost:8000/api/users --> userRouter
+server.use('/katas', verifyToken, kataRouter); // http://localhost:8000/api/katas --> kataRouter
 // Auth routes
 server.use('/auth', authRouter); // http://localhost:8000/api/auth --> AuthRouter
 
